Home: fixed z-index issue with signup form

--- a/client/landing/site.landing/styl/home.styl
+++ b/client/landing/site.landing/styl/home.styl
@@ -22,6 +22,7 @@ body.home
     padding               8px
     rounded               8px
     bg                    color rgba(0,0,0,.1)
+    z-index               1
     rel()
 
     &.noanim .login-input-view .placeholder-helper
